--- a/Footer/index.html
+++ b/Footer/index.html
@@ -9,56 +9,60 @@
 	<link href="root/css/style.css" rel="stylesheet">
 </head>
 <body>
-	<footer class="container-fluid">
-		<div class="container footer_custom text-left">		
-			<div class="about_footer col-lg-4">
-				<h3>About Assurance</h3>
-				<p>
-					The final frontier these are the voyages of the Starship Enterprise the weather started getting if no one else can help and if you can find them.
-				</p>
-				<a href="#">H2,Angelsgarden,North California,US</a>
-				<a href="#">info@domainname.com</a>
-				<a href="#">1-800 23 456 7890</a>
-			</div>
-			<div class="infomation_footer col-lg-3">
-				<h3>Information Links</h3>
-				<ul>
-					<li><a href="">Annual Report</a></li>
-					<li><a href="">Board of Members</a></li>
-					<li><a href="">Become Investors</a></li>
-					<li><a href="">Proposal Form</a></li>
-					<li><a href="">Stock Information</a></li>
-					<li><a href="">Events</a></li>
-					<li><a href="">FAQ</a></li>
-				</ul>
-			</div>
-			<div class="quick_link_footer col-lg-2">
-				<h3>Quick Links</h3>
-				<ul>
-					<li><a href="">About us</a></li>
-					<li><a href="">24/7 Support</a></li>
-					<li><a href="">Careers</a></li>
-					<li><a href="">Claims</a></li>
-					<li><a href="">App Download</a></li>
-					<li><a href="">Get a Quote</a></li>
-				</ul>
-			</div>
-			<div class="sub_footer col-lg-3">
-				<h3>Subscribe</h3>
-				<p>Get the latest report about <br>the insurance and company profile</p>
-				<form>
-					<input type="text" name="" placeholder="Your Email">
-					<a href=""></a>
-				</form>
-				<div class="social_icon">
-					<a href=""><img src="" alt=""></a>
-					<a href=""><img src="" alt=""></a>
-					<a href=""><img src="" alt=""></a>
-					<a href=""><img src="" alt=""></a>
-					<a href=""><img src="" alt=""></a>
+	<footer>	
+			<div class="top_footer text-left">
+				<div class="footer_custom clearfix">			
+					<div class="about_footer">
+						<h3>About Assurance</h3>
+						<p>
+							The final frontier these are the voyages of the Starship Enterprise the weather started getting if no one else can help and if you can find them.
+						</p>
+						<a class="adress_footer" href="#">H2,Angelsgarden,North California,US</a>
+						<a class="email_footer" href="#">info@domainname.com</a>
+						<a class="phone_footer" href="#">1-800 23 456 7890</a>
+					</div>
+					<div class="infomation_footer">
+						<h3>Information Links</h3>
+						<ul>
+							<li><a href="">Annual Report</a></li>
+							<li><a href="">Board of Members</a></li>
+							<li><a href="">Become Investors</a></li>
+							<li><a href="">Proposal Form</a></li>
+							<li><a href="">Stock Information</a></li>
+							<li><a href="">Events</a></li>
+							<li><a href="">FAQ</a></li>
+						</ul>
+					</div>
+					<div class="quick_link_footer">
+						<h3>Quick Links</h3>
+						<ul>
+							<li><a href="">About us</a></li>
+							<li><a href="">24/7 Support</a></li>
+							<li><a href="">Careers</a></li>
+							<li><a href="">Claims</a></li>
+							<li><a href="">App Download</a></li>
+							<li><a href="">Get a Quote</a></li>
+						</ul>
+					</div>
+					<div class="sub_footer">
+						<h3>Subscribe</h3>
+						<p>Get the latest report about <br>the insurance and company profile</p>
+						<form>
+							<input type="text" name="" placeholder="Your Email">
+							<a href=""></a>
+						</form>
+						<div class="social_icon">
+							<a href=""><img src="root/img/icon_face_footer.png" alt=""></a>
+							<a href=""><img src="root/img/icon_tw_footer.png" alt=""></a>
+							<a href=""><img src="root/img/icon_gg_footer.png" alt=""></a>
+							<a href=""><img src="root/img/icon_insta_footer.png" alt=""></a>
+						</div>
+					</div>
 				</div>
 			</div>
-		</div>
+			<div class="bottom_footer text-center">
+				<p>Copyrights  Assurance Company.All rights reserved</p>
+			</div>
 	</footer>
     <script src="root/js/jquery-3.4.1.min.js"></script>
     <script src="root/js/bootstrap.min.js"></script>
