create client logo

--- a/Footer/root/index.html
+++ b/Footer/root/index.html
@@ -5,8 +5,8 @@
 	<title></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-	<link href="root/css/bootstrap.min.css" rel="stylesheet">
-	<link href="root/css/style.css" rel="stylesheet">
+	<link href="css/bootstrap.min.css" rel="stylesheet">
+	<link href="css/style.css" rel="stylesheet">
 </head>
 <body>
 	<footer>	
@@ -52,10 +52,10 @@
 							<a href=""></a>
 						</form>
 						<div class="social_icon">
-							<a href=""><img src="root/img/icon_face_footer.png" alt=""></a>
-							<a href=""><img src="root/img/icon_tw_footer.png" alt=""></a>
-							<a href=""><img src="root/img/icon_gg_footer.png" alt=""></a>
-							<a href=""><img src="root/img/icon_insta_footer.png" alt=""></a>
+							<a href=""><img src="img/icon_face_footer.png" alt=""></a>
+							<a href=""><img src="img/icon_tw_footer.png" alt=""></a>
+							<a href=""><img src="img/icon_gg_footer.png" alt=""></a>
+							<a href=""><img src="img/icon_insta_footer.png" alt=""></a>
 						</div>
 					</div>
 				</div>
@@ -64,7 +64,7 @@
 				<p>Copyrights  Assurance Company.All rights reserved</p>
 			</div>
 	</footer>
-    <script src="root/js/jquery-3.4.1.min.js"></script>
-    <script src="root/js/bootstrap.min.js"></script>
+    <script src="js/jquery-3.4.1.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 </body>
 </html>
