--- a/Client Logo/root/index.html
+++ b/Client Logo/root/index.html
@@ -9,7 +9,9 @@
 	<link href="css/style.css" rel="stylesheet">
 </head>
 <body>
-	
+	<div class="">
+		
+	</div>
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
 </body>
