done client logo

--- a/Client Logo/root/index.html
+++ b/Client Logo/root/index.html
@@ -9,8 +9,25 @@
 	<link href="css/style.css" rel="stylesheet">
 </head>
 <body>
-	<div class="">
-		
+	<div class="client_logo">
+		<div class="container clearfix">		
+			<div class="client_logo_left">
+				<h2>Our Partners</h2>
+				<div class="line_client_logo"></div>
+				<p>Can you tell me how to get how to get to sesame street you wanna be where you can see our troubles are all the same. You wanna be where everybody knows Your name. Just sit right back and you'll hear a tale a tale of a fateful trip that started from this tropic port aboard this tiny ship.</p>
+				<a href="">Get info</a>
+			</div>
+			<div class="client_logo_right">
+				<div class="imgs">	
+					<img src="img/img_client_logo.png" alt="">
+					<img src="img/img_client_logo.png" alt="">
+					<img src="img/img_client_logo.png" alt="">
+					<img src="img/img_client_logo.png" alt="">
+					<img src="img/img_client_logo.png" alt="">
+					<img src="img/img_client_logo.png" alt="">
+				</div>
+			</div>
+		</div>
 	</div>
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
