--- a/Banner/index.html
+++ b/Banner/index.html
@@ -12,30 +12,34 @@
 	<div class="header-201905041907">
 		<div class="top-header">
 			<div class="container">			
-				<div class="left col-lg-6 text-left">
-					<a class="email" href="#">info@domainname.com</a>
-					<a class="phone" href="#">1-800 23 456 7890</a>
+				<div class="left col-md-6 col-sm-7 text-left">
+					<a class="email" href="#"><span class="glyphicon glyphicon-envelope
+"></span>info@domainname.com</a>
+					<a class="phone" href="#"><span class="glyphicon glyphicon-earphone
+"></span>1-800 23 456 7890</a>
 				</div>
-				<div class="right col-lg-6 text-right">
-					<a class="find" href="#">Find an Agent</a>
-					<a class="login" href="#">Login</a>
+				<div class="right col-md-6 col-sm-5 text-right">
+					<a class="find" href="#"><span class="glyphicon glyphicon-user
+"></span>Find an Agent</a>
+					<a class="login" href="#"><span class="glyphicon glyphicon-log-in
+"></span>Login</a>
 				</div>
 			</div>
 		</div>
 		<div class="center-header">
 			<div class="container">			
-				<div class="left text-left col-lg-4">
+				<div class="left text-left col-md-4">
 					<a class="share_face" href=""><img src="root/img/icon-face.png" alt=""></a>
 					<a class="share_tw" href=""><img src="root/img/icon-tw.png" alt=""></a>
 					<a class="share_gg" href=""><img src="root/img/icon-google.png" alt=""></a>
 				</div>
-				<div class="center text-center col-lg-4">
+				<div class="center text-center col-md-4">
 					<a href=""><img src="root/img/logo.png" alt=""></a>
 				</div>
 				<div class="right text-right col-lg-4">
 					<form class="search">
 						<input type="" name="" placeholder="Search...">
-						<a href="#" class="btn_search"></a>
+						<a href="#" class="btn_search glyphicon glyphicon-search"></a>
 					</form>
 				</div>
 			</div>
@@ -54,22 +58,23 @@
 			        <div id="navbar" class="navbar-collapse collapse" aria-expanded="false">
 			            <ul class="nav navbar-nav">
 							<li class="active"><a href="mailto:joe@example.com?subject=feedback" "email me">Home</a></li>
-							<li><a href="mailto:joe@example.com?subject=feedback" "email me">About</a></li>
+							<li><a href="#">About</a></li>
 			                <li class="dropdown">
-			                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Insurance<span class="caret"></span></a>
+			                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Insurance<span class="glyphicon glyphicon-chevron-down
+"></span></a>
 			                    <ul class="dropdown-menu" role="menu">
 			                        <li><a href="#">1</a></li>
 			                        <li><a href="#">2</a></li>
 			                        <li><a href="#">3</a></li>
 			                    </ul>
 			                </li>
-							<li><a href="mailto:joe@example.com?subject=feedback" "email me">Insurance</a></li>
-							<li><a href="mailto:joe@example.com?subject=feedback" "email me">News</a></li>
-							<li><a href="mailto:joe@example.com?subject=feedback" "email me">Team</a></li>
-							<li><a href="mailto:joe@example.com?subject=feedback" "email me">Claim</a></li>
-							<li><a href="mailto:joe@example.com?subject=feedback" "email me">Dowloads</a></li>
-							<li><a href="mailto:joe@example.com?subject=feedback" "email me">Get Quote</a></li>
-							<li><a href="mailto:joe@example.com?subject=feedback" "email me">Contact</a></li>             
+							<li><a href="#">Insurance</a></li>
+							<li><a href="#">News</a></li>
+							<li><a href="#">Team</a></li>
+							<li><a href="#">Claim</a></li>
+							<li><a href="#">Dowloads</a></li>
+							<li><a href="#">Get Quote</a></li>
+							<li><a href="#">Contact</a></li>             
 			            </ul>
 			        </div><!--/.nav-collapse -->
 			    </div>
