--- a/Our Products/root/index.html
+++ b/Our Products/root/index.html
@@ -12,6 +12,72 @@
 	<div class="our_products">
 		<h2>Our Products</h2>
 		<p>Till the one day when the lady met this fellow and they knew it was much more than a hunch </p>
+		<div class="blocks">
+			<div class="block block_1">
+				<div class="img">
+					<img class="img_hover" src="img/icon_car_our_product_selected.png" alt="">
+					<img class="img_df" src="img/icon_car_our_product.png" alt="">
+				</div>
+				<div class="content_text">
+					<h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit,</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				</div>
+			</div>
+			<div class="block block_2 active">
+				<div class="img">
+					<img class="img_hover" src="img/business_our_product_selected.png" alt="">
+					<img class="img_df" src="img/business_our_product.png" alt="">
+				</div>
+				<div class="content_text">
+					<h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit,</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				</div>
+			</div>
+			<div class="block block_3">
+				<div class="img">
+					<img class="img_hover" src="img/heart_our_product.png" alt="">
+					<img class="img_df" src="img/heart_our_product.png" alt="">					
+				</div>
+				<div class="content_text">
+					<h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit,</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				</div>
+			</div>
+			<div class="block block_4">
+				<div class="img">
+					<img class="img_hover" src="img/heart_our_product.png" alt="">
+					<img class="img_df" src="img/heart_our_product.png" alt="">					
+				</div>
+				<div class="content_text">
+					<h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit,</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				</div>
+			</div>
+		</div>
+		<div class="text_links">
+			<a class="start" href="">Get Started</a>
+			<a class="view" href="">View all feature</a>
+		</div>
 	</div>
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
